style: fix mobile top gap with theme-color and css overrides

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,8 @@ body,
 html {
     top: 0px !important;
     margin-top: 0px !important;
+    padding-top: 0px !important;
+    position: static !important;
 }
 
 /* Style the Google translate widget to blend with dark mode */
